💄 Ajustes al menú, estilos y configuración fetch en HttpClient

--- a/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
+++ b/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
@@ -1,6 +1,6 @@
-<header>
+  <header>
+    <h1>🌟 Pika Trading - Adquiere las cartas que buscas 🌟</h1>
     <nav>
-      <h1>🌟 Pika Trading - Adquiere las cartas que buscas 🌟</h1>
       <ul>
         <li><a routerLink="/home">Inicio</a></li>
         <li><a href="#">Cartas</a></li>
@@ -10,7 +10,8 @@
     </nav>
   </header>
   
-  <router-outlet></router-outlet> <!-- Aquí se cargan las páginas -->
+  <!-- Aquí se renderiza el contenido dinámico -->
+  <router-outlet></router-outlet>
   
   <footer>
     <div class="footer-content">
