Se agrega la ista de registro de usuario con su respectiva navegacion

--- a/pika-trading-frontend/src/app/login/login.component.html
+++ b/pika-trading-frontend/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         
         <div class="links">
             <a href="#">¿Olvidaste la contraseña? Recupera tu cuenta</a>
-            <a href="#">¿No tienes cuenta? Regístrate aquí</a>
+            <a href="/registro">¿No tienes cuenta? Regístrate aquí</a>
         </div>
     </form>
 </div>
