Se agrega el componente sobre nosotros, tambien se agrega la imagen correspondiente de la view en assets

--- a/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
+++ b/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
@@ -20,7 +20,7 @@
         <!-- Agrega iconos aquí -->
       </div>
       <ul>
-        <li><a href="#">Quiénes somos</a></li>
+        <li><a routerLink="/sobre-nosotros">Quiénes somos</a></li>
         <li><a href="#">Contáctanos</a></li>
         <li><a href="#">FQA</a></li>
       </ul>
