Ajuste en el header y el menu para que se vea igual en cualquier pagina, se creo el modulo de cartas se da diseño responsive

--- a/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
+++ b/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
@@ -1,9 +1,9 @@
-  <header>
+  <header [ngClass]="{ 'header-cartas': isCartas }" class="main-header">
     <h1>🌟 Pika Trading - Adquiere las cartas que buscas 🌟</h1>
     <nav>
       <ul>
         <li><a routerLink="/home">Inicio</a></li>
-        <li><a href="#">Cartas</a></li>
+        <li><a routerLink="/cartas">Cartas</a></li>
         <li><a href="#">Sobres</a></li>
         <li><a routerLink="/login">Iniciar sesión</a></li>
       </ul>
