--- a/pika-trading-frontend/src/app/home/home.component.scss
+++ b/pika-trading-frontend/src/app/home/home.component.scss
@@ -3,7 +3,6 @@ body {
     background: #f4e1c5;
     margin: 0;
   }
-  
   .navbar {
     display: flex;
     justify-content: space-between;
@@ -13,7 +12,7 @@ body {
   }
   
   .navbar nav a {
-    margin: 0 10px;
+    //margin: 0 10px;
     text-decoration: none;
     color: black;
   }
