--- a/pika-trading-frontend/src/styles.scss
+++ b/pika-trading-frontend/src/styles.scss
@@ -29,6 +29,7 @@ router-outlet + * {
   flex: 1;
 }
 
+
 // Header
 header {
   background-color: $primary-color;
@@ -44,44 +45,31 @@ header {
     margin: 0;
   }
 
-  nav ul li:last-child a {
-    background-color: black;
-    color: white;
-    padding: 10px 15px;
-    border-radius: 8px;
-    font-weight: bold;
-    display: inline-block;
-    transition: background 0.3s ease-in-out;
-  
-    &:hover {
-      background-color: color.scale(black, $lightness: -10%);
-    }
-  }
-  
-
   nav {
     display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-left: auto;
+    gap: 15px; /* Espaciado uniforme */
 
     ul {
-      list-style: none;
       display: flex;
-      gap: 15px;
-      padding: 0;
-      margin: 0;
-      margin-left: auto;
+      //gap: 10px; /* Ajusta la separación */
+      list-style: none;
+      justify-content: space-between;
+      align-items: center;
 
       li {
         a {
           color: white;
           padding: 5px 10px;
-          border-radius: 5px;
+          border-radius: 8px;
           background-color: $primary-color;
+          text-align: center;
+          min-width: 80px;
           cursor: pointer;
           text-decoration: none;
-          display: inline-block;
+          //align-items: center;
+          //justify-content: center;
+          font-weight: bold;
+          height: 40px;
           transition: color 0.3s ease-in-out;
 
           &:hover {
@@ -89,37 +77,52 @@ header {
           }
         }
       }
-    }
-    
-  }
 
-  @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: flex-start;
-
-    nav {
-      width: 100%;
-      flex-direction: column;
-      align-items: flex-start;
-
-      ul {
-        width: 100%;
-        flex-direction: column;
-        gap: 10px;
-        padding-left: 0;
-
-        li {
-          width: 100%;
-        }
-
+      /* Ajuste para "Iniciar sesión" */
+      li:last-child {
         a {
-          display: block;
-          width: 100%;
+          background-color: black;
+          color: white;
+          height: 40px;
+          padding: 5px 10px;
+          //display: flex;
+          align-items: center;
+          justify-content: center;
+          border-radius: 8px;
+          font-weight: bold;
+          transition: background 0.3s ease-in-out;
+
+          &:hover {
+            background-color: color.scale(black, $lightness: -10%);
+          }
         }
       }
     }
   }
 }
+
+/* === RESPONSIVE DESIGN === */
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    text-align: center;
+    padding: 15px;
+  }
+
+  nav {
+    width: 100%;
+    margin-top: 10px;
+
+    ul {
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+  }
+}
+
+
+
 
 // Sección principal
 main {
@@ -302,3 +305,9 @@ footer {
     }
   }
 }
+
+
+
+
+
+
