se organiza el api del backend y se crea el archivo para guardar info .json, tambien se crea el manejo de sesion con localstorage y los modulos para implementar junto con los cambios a los TS de los modulos que tocaba modificar, también se creo la vista para el admin de la tabla con los usuarios

--- a/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
+++ b/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
@@ -5,7 +5,8 @@
         <li><a routerLink="/home">Inicio</a></li>
         <li><a routerLink="/cartas">Cartas</a></li>
         <li><a href="#">Sobres</a></li>
-        <li><a routerLink="/login">Iniciar sesión</a></li>
+        <li *ngIf="!usuarioLogueado"><a routerLink="/login">Iniciar sesión</a></li>
+        <li *ngIf="usuarioLogueado"><a (click)="cerrarSesion()">Cerrar sesión</a></li>
       </ul>
     </nav>
   </header>
