--- a/pika-trading-frontend/src/app/login/login.component.scss
+++ b/pika-trading-frontend/src/app/login/login.component.scss
@@ -77,3 +77,10 @@ button:hover {
     height: 100vh; // ocupa toda la altura de la pantalla
     width: 100%;
   }
+
+  .error-message {
+    color: red;
+    font-weight: bold;
+    margin-top: 10px;
+  }
+  
