--- a/pika-trading-frontend/src/app/login/login.component.html
+++ b/pika-trading-frontend/src/app/login/login.component.html
@@ -1,18 +1,22 @@
 <div class="login-container">
     <h1>Inicio de sesión</h1>
-    <form>
-        <label for="email">Dirección de correo electrónico</label>
-        <input type="email" id="email" placeholder="Ingrese su correo">
-        
-        <label for="password">Contraseña</label>
-        <input type="password" id="password" placeholder="Ingrese su contraseña">
-        
-        <button type="submit">Iniciar sesión</button>
-        
-        <div class="links">
-            <a href="/recuperar-contrasena">¿Olvidaste la contraseña? Recupera tu cuenta</a>
-            <a href="/registro">¿No tienes cuenta? Regístrate aquí</a>
-        </div>
+    <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+      <label for="email">Dirección de correo electrónico</label>
+      <input type="email" id="email" name="email" [(ngModel)]="email" required placeholder="Ingrese su correo" />
+  
+      <label for="password">Contraseña</label>
+      <input type="password" id="password" name="password" [(ngModel)]="password" required placeholder="Ingrese su contraseña" />
+  
+      <button type="submit" [disabled]="loginForm.invalid">Iniciar sesión</button>
+      <div *ngIf="error" class="error-message">
+        {{ error }}
+      </div>
+      
+  
+      <div class="links">
+        <a routerLink="/recuperar-contrasena">¿Olvidaste la contraseña? Recupera tu cuenta</a>
+        <a routerLink="/registro">¿No tienes cuenta? Regístrate aquí</a>
+      </div>
     </form>
-</div>
-
+  </div>
+  
