--- a/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
+++ b/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
@@ -5,11 +5,11 @@
         <li><a routerLink="/home">Inicio</a></li>
         <li><a routerLink="/cartas">Cartas</a></li>
 
-        <li *ngIf="rol === 'admin'"><a routerLink="/usuarios">Lista usuarios</a></li>
+        <li *ngIf="rol === 'admin'"><a routerLink="/admin">Lista usuarios</a></li>
         <li *ngIf="rol === 'admin'"><a routerLink="/pedidos">Pedidos</a></li>
         <li *ngIf="rol === 'admin'"><a routerLink="/estadisticas">Estadísticas</a></li>
         
-        <li><a href="#">Sobres</a></li>
+        <li><a routerLink="/sobres">Sobres</a></li>
         <li *ngIf="!usuarioLogueado"><a routerLink="/login">Iniciar sesión</a></li>
         <li *ngIf="usuarioLogueado"><a (click)="cerrarSesion()">Cerrar sesión</a></li>
       </ul>
