Se agrega el modulo de carrito y se enlaza la vista cartas con la vista carrito

--- a/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
+++ b/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
@@ -11,6 +11,11 @@
         <li><a routerLink="/home">Inicio</a></li>
         <li><a routerLink="/cartas">Cartas</a></li>
         <li><a routerLink="/sobres">Sobres</a></li>
+        <li>
+          <a routerLink="/carrito">
+            🛒 Carrito ({{ totalItems }})
+          </a>
+        </li>        
         <li *ngIf="!usuarioLogueado"><a routerLink="/login">Iniciar sesión</a></li>
         <li *ngIf="usuarioLogueado"><a (click)="cerrarSesion()">Cerrar sesión</a></li>
       </ul>
