Se agrega la vista perfil de usuario, se mueve el boton cerrar sesion a la seccion del perfil

--- a/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
+++ b/pika-trading-frontend/src/app/layout/home-layout/home-layout.component.html
@@ -7,17 +7,20 @@
         <li *ngIf="rol === 'admin'"><a routerLink="/admin">Lista usuarios</a></li>
         <li *ngIf="rol === 'admin'"><a routerLink="/pedidos">Pedidos</a></li>
         <li *ngIf="rol === 'admin'"><a routerLink="/estadisticas">Estadísticas</a></li>
+        <li *ngIf="rol === 'admin'"><a routerLink="/usuario">Estadísticas</a></li>
         <!-- Fin bloque logico del nav barr para admin-->
         <li><a routerLink="/home">Inicio</a></li>
         <li><a routerLink="/cartas">Cartas</a></li>
         <li><a routerLink="/sobres">Sobres</a></li>
+        <li *ngIf="rol === 'usuario'"><a routerLink="/perfil-usuario">👤 Perfil</a></li>
+
         <li>
           <a routerLink="/carrito">
             🛒 Carrito ({{ totalItems }})
           </a>
         </li>        
         <li *ngIf="!usuarioLogueado"><a routerLink="/login">Iniciar sesión</a></li>
-        <li *ngIf="usuarioLogueado"><a (click)="cerrarSesion()">Cerrar sesión</a></li>
+        <li *ngIf="rol === 'admin'"><a (click)="cerrarSesion()">Cerrar sesión</a></li>
       </ul>
     </nav>
   </header>
